# repo-r-type

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build-windows.bat  build.sh  clean.sh  commitlint.config.js  conanfile.Txt  vcpkg-configuration.json  vcpkg.json
.github/: commitlint-baseline
.github/instructions/: instruction.instructions.md
.github/workflows/: ci.yml  pr-discord-alert.yml  sync.yml  windows-msvc.yml  windows.yml
client/: CMakeLists.txt
client/include/: AccessibilityManager.hpp  Client.hpp  GameState.hpp  LobbyState.hpp  MenuState.hpp  ModeSelectionState.hpp  NetworkSystem.hpp  ParallaxSystem.hpp  Renderer.hpp  SFMLRenderer.hpp  ScoreboardManager.hpp  ScoreboardState.hpp  SoloSettingsState.hpp  States.hpp  UdpClient.hpp
client/include/components/: SpectatorComponent.hpp
client/include/systems/: SpectatorSystem.hpp
client/saves/: scoreboard.txt
client/src/: AccessibilityManager.cpp  Client.cpp  GameState.cpp  LobbyState.cpp  MenuState.cpp  ModeSelectionState.cpp  NetworkSystem.cpp  Renderer.cpp  SFMLRenderer.cpp  ScoreboardManager.cpp  ScoreboardState.cpp  SoloSettingsState.cpp  States.cpp  UdpClient.cpp  main.cpp
client/src/systems/: SpectatorSystem.cpp
config/: game.json
documentation/: ACCESSIBILITY.md  DEVELOPER_DOCUMENTATION.md  RENDER_SYSTEM_REFACTORING.md  RTYPE_BINARY_PROTOCOL.md  SCOREBOARD_SYSTEM.md  USER_GUIDE.md  doc-protocol-rfc-format.md  how_to_contribute.md  rfc-protocol.txt
documentation/bench_stockage/: config_test.yml
documentation/benchmark/bench_stockage/: bench_json.cpp  bench_yaml.cpp  config_test.json
documentation/benchmark/benchmark_data_struct/: bench_map.cpp  bench_sparse.cpp  bench_vector.cpp  benchmark_common.hpp  bilan.md
documentation/benchmark/benchmark_ecs/: bench_custom_simple.cpp  bench_entt.cpp  bilan.md  test.sh
documentation/benchmark/benchmark_graphical/: CMakeLists.txt  bench_raylib.cpp  bench_sdl2.cpp  bench_sfml.cpp  bilan.md  test.sh
documentation/benchmark/benchmark_network/: bench_asio.cpp  bench_enet.cpp  bench_raw_sockets.cpp  bench_sdl_net.cpp  bilan.md  test.sh
documentation/benchmark/benchmark_protocol/: bench_protocol.cpp  bilan.md
documentation/benchmark/benchmark_security/: bilan.md
documentation/benchmark/benchmark_storage/: bilan.md
ecs/: CMakeLists.txt
ecs/include/: Entity.hpp  ISystem.hpp  Registry.hpp  SparseArray.hpp  System.hpp  SystemManager.hpp  Systems.hpp
ecs/include/components/: AudioEvent.hpp  CollisionLayer.hpp  Controllable.hpp  CpuStats.hpp  Drawable.hpp  EnemySpawner.hpp  Explosion.hpp  FpsCounter.hpp  GameModeComponent.hpp  GameRulesComponent.hpp  Gravity.hpp  Health.hpp  HitBox.hpp  HitFlash.hpp  InvincibilityTimer.hpp  Jump.hpp  LagometerComponent.hpp  Lives.hpp  MapBounds.hpp  MovementPattern.hpp  NetworkId.hpp  NetworkInterpolation.hpp  Parent.hpp  PingStats.hpp  PlayerName.hpp  Position.hpp  PowerUpType.hpp  Projectile.hpp  Score.hpp  ScreenMode.hpp  Sound.hpp  SpawnEffect.hpp  SpectatorComponent.hpp  StageCleared.hpp  Tag.hpp  TextDrawable.hpp  TextureAnimation.hpp  UITag.hpp  Velocity.hpp  Weapon.hpp
ecs/include/systems/: AnimationSystem.hpp  AudioSystem.hpp  BoundarySystem.hpp  CollisionSystem.hpp  CpuMetricSystem.hpp  DevToolsSystem.hpp  ForcePodSystem.hpp  FpsSystem.hpp  GameRuleSystem.hpp  InputSystem.hpp  InterpolationSystem.hpp  LagometerSystem.hpp  LivesSystem.hpp  MapGeneratorSystem.hpp  MobSystem.hpp  MovementSystem.hpp  PingSystem.hpp  PlatformerPhysicsSystem.hpp  ProjectileSystem.hpp  RenderSystem.hpp  ScoreSystem.hpp  SpawnEffectSystem.hpp  SpawnSystem.hpp  SpectatorSystem.hpp  TextureAnimationSystem.hpp  UIRenderSystem.hpp  WeaponSystem.hpp
ecs/src/: Registry.cpp  System.cpp  Systems.cpp
ecs/src/systems/: AnimationSystem.cpp  AudioSystem.cpp  BoundarySystem.cpp  CollisionSystem.cpp  CpuMetricSystem.cpp  DevToolsSystem.cpp  ForcePodSystem.cpp  FpsSystem.cpp  GameRuleSystem.cpp  InputSystem.cpp  InterpolationSystem.cpp  LagometerSystem.cpp  LivesSystem.cpp  MapGeneratorSystem.cpp  MobSystem.cpp  MovementSystem.cpp  PingSystem.cpp  PlatformerPhysicsSystem.cpp  ProjectileSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  SpawnEffectSystem.cpp  SpawnSystem.cpp  SpectatorSystem.cpp  TextureAnimationSystem.cpp  UIRenderSystem.cpp  WeaponSystem.cpp
installer/: installer.nsi
installer/script/: setup_rtype_network.ps1
platformer/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt
server/assets/: map.txt
server/include/: BroadcastSystem.hpp  ClientInfo.hpp  GameSession.hpp  Instance.hpp  Server.hpp  UdpServer.hpp
server/src/: BroadcastSystem.cpp  GameSession.cpp  Instance.cpp  Server.cpp  Server_handle_player_name.cpp  UdpServer.cpp  main.cpp
shared/: CMakeLists.txt  GameConstants.hpp  ScoreData.cpp  ScoreData.hpp
shared/interfaces/ecs/: IEntityRegistry.hpp  ISystem.hpp
shared/interfaces/network/: IMessageSerializer.hpp  IProtocolAdapter.hpp
shared/interfaces/rendering/: IRenderer.hpp  NullRenderer.hpp
shared/net/: Deserializer.hpp  MessageData.hpp  MessageSerializer.hpp  Packet.hpp  Protocol.hpp  ProtocolAdapter.hpp  Serializer.hpp
shared/utils/: GameConfig.hpp  GameRules.hpp  LevelDefs.hpp  Logger.hpp
src/server/: main.cpp
tests/: CMakeLists.txt  TestCollisionBehavior.cpp  TestMovement.cpp  TestNetworkSystem.cpp  TestWeapon.cpp
